# tact-obsolete

./: .gitignore  .ocamlformat  README.md  dune  dune-project  ppx_tontlb.opam  sdgsf.tact  syntax.intf  tact.opam  tact.opam.locked  tontlb.opam  tonvm.opam
.github/workflows/: ci.yml
examples/: actors.tact  wallet_v3.tact
js/: dune  tact_js.ml
lib/: actors.ml  alt_parser.ml  asm.ml  asm_lexer.mll  asm_parser.mly  attributes.ml  builtin.ml  codegen.ml  codegen_demo_func.ml  codegen_func.ml  compiler.ml  config.ml  discriminator.ml  dune  errors.ml  evaluator.ml  func.ml  func_codegen.ml  interpreter.ml  lang.ml  lang_ir.ml  lang_types.ml  lexer.mll  located.ml  parser.ml  parser.mly  parserMessages.messages  partial_evaluator.ml  pp.ml  show.ml  stdlib.ml  syntax.ml  tokens.mly  type_check.ml  zint.ml
lib/std/: std.tact
test/: actors.ml  builtin.ml  builtin_basics.ml  codegen_demo_func.ml  codegen_func.ml  dune  errors.ml  evaluator.ml  examples.tact  func_codegen.ml  immediacy_check.ml  lang.ml  lang_ir.ml  lang_types.ml  shared.ml  std.ml  syntax.ml
tontlb/: bitstr.ml  block.ml  dune  lang.ml  lang_tests.ml  lexer.mll  parser.mly  parser_tests.ml  syntax.ml  tlb.ml  zint.ml
tontlb/ppx_tlb/: dune  ppx_tlb.ml
tontlb/ppx_tlb/test/: block.ml  block.tlb  dune
tonvm/: bitstr.ml  bitstr_test.ml  cell.ml  cont.ml  cp.ml  dune  instr.ml  instr_null.ml  instr_null_test.ml  instr_stack.ml  instr_stack_test.ml  tests.ml  tonvm.ml  value.ml  vm.ml  zint.ml
