(lang dune 2.9)
(using menhir 2.1)
(generate_opam_files true)

(name tact)
(source (github tact-lang/tact))
(license Apache-2.0)
(authors "cmxog@protonmail.com" "dmytro.polunin@gmail.com")
(maintainers "cmxog@protonmail.com" "dmytro.polunin@gmail.com")

(package
 (name tonvm)
 (synopsis "TON Virtual Machine implementation")
 (depends
   (ocaml (>= 4.14.0))
   (base (>= 0.15.0))
   (zarith (>= 1.12))
   (stdint (>= 0.7.0))
   (ppx_show (>= 0.2.1))
   (sexplib (>= 0.15.0))
   (ppx_sexp_conv (>= 0.15.1))
   (dune (and :build (>= 3.1.1)))
   (ppx_expect (and :with-test (>= 0.15.0)))))

(package
 (name tact)
 (synopsis "TON Tact Language")
 (depends
   (ocaml (>= 4.14.0))
   (ppx_show (>= 0.2.1))
   (ppx_make (>= 0.3.0))
   (ppx_blob (>= 0.7.2))
   (js_of_ocaml-ppx (>= 4.0.0))
   (zarith_stubs_js (>= 0.15.0))
   (dune (and :build (>= 3.1.1)))
   (js_of_ocaml (>= 4.0.0))
   (menhirLib (= 20220210))
   (menhir (= 20220210))
   (menhirSdk (= 20220210))
   (zarith (>= 1.12))
   (base (>= 0.15.0))
   (ppx_jane (>= 0.15.0))
   (visitors (= 20210608))
   (core (and :with-test (>= 0.15.0)))
   (ppx_expect (and :with-test (>= 0.15.0)))
   (ppx_matches (and :with-test (>= 0.1)))
   (alcotest (and :with-test (>= 1.5.0)))
   (ppx_inline_alcotest (and :with-test (>= 1.0.0)))
   (utop (and :build (>= 2.9.1)))
   (ocamlformat (and :build (>= 0.21.0))))
)
