name: "tact"
opam-version: "0.1"
maintainer: "cmxog@protonmail.com"
authors: [
  "cmxog@protonmail.com"
]
homepage: "https://github.com/tact-lang/tact"
dev-repo: "git+https://github.com/tact-lang/tact"
bug-reports: "https://github.com/tact-lang/tact/issues"
license: "Apache-2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.14.0"}
  "ppx_show" {>= "0.2.1"}
  "ppx_make" {>= "0.3.0"}
  "ppx_import" {>= "1.9.1"}
  "dune" {>= "3.1.1"}
  "menhirLib" {= "20220210" }
  "menhir" {= "20220210"}
  "menhirSdk" {= "20220210"}
  "utop" {build & >= "2.9.1"}
]
synopsis: "TON Tact Language"
