(library
 (libraries
  base
  ppx_show.runtime
  zarith
  visitors.runtime
  ppx_sexp_conv
  sexplib
  containers
  mparser)
 (preprocess
  (pps
   ppx_show
   ppx_make
   ppx_compare
   visitors.ppx
   ppx_sexp_conv
   ppx_blob
   ppx_hash))
 (preprocessor_deps
  (file std/std.tact))
 (name tact))
