(library
 (preprocess
  (staged_pps ppx_matches ppx_expect ppx_sexp_conv))
 (name tact_tests)
 (inline_tests)
 (modules syntax evaluator)
 (libraries tact core sexplib))

(tests
 (preprocess
  (staged_pps ppx_matches))
 (names lang_types errors)
 (modules lang_types errors)
 (libraries tact alcotest ppx_matches core))
