(library
 (preprocess
  (staged_pps ppx_matches ppx_expect ppx_sexp_conv))
 (name shared)
 (inline_tests)
 (modules shared)
 (libraries tact core sexplib))

(library
 (preprocess
  (staged_pps ppx_matches ppx_expect ppx_sexp_conv))
 (name tact_tests)
 (inline_tests)
 (modules syntax lang builtin codegen_func)
 (libraries tact core sexplib shared))

(library
 (preprocess
  (staged_pps ppx_matches ppx_sexp_conv ppx_inline_alcotest))
 (name tact_tests_)
 (inline_tests)
 (modules errors builtin_basics lang_types)
 (libraries tact core sexplib shared alcotest))
